Adds comment above captcha box

--- a/ioos_catalog/templates/feedback.html
+++ b/ioos_catalog/templates/feedback.html
@@ -36,6 +36,7 @@
         <div class="panel-heading">CAPTCHA</div>
         <div class="panel-body">
           <img id="captcha_img" src="" alt="Captcha"></img>
+          <label id="captchaLabel" for="captcha-text">Please enter the text of the image in the box below</label>
           <input name="captcha_text" type="text" class="form-control" id="captchaInput">
         </div> <!-- panel-body -->
       </div> <!-- panel -->
