--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -351,20 +351,14 @@ var countsByProvider   = {{ counts_by_provider | tojson }};
 var datasetsByProvider = {{ dataset_counts_by_provider | tojson }};
 var updates            = {{ updates | tojson }};
 var dsTranslate = {
-  RGRID: 'Rectilinear Grid',
-  grid: 'Rectilinear Grid',
-  Grid: 'Rectilinear Grid',
-  CGRID: 'Curvilinear Grid',
-  UNKNOWN: 'Unknown',
-  "(NONE)": 'No Dataset Type detected',
-  "FIXED MET STATION": 'Fixed Met Station',
   'All': 'Show all datasets',
   'Regular Grid': 'Rectilinear Grid',
   'Trajectory': 'Data taken from a trajectory with varying location in time.  Often corresponds with glider data.',
   'Curvilinear Grid': 'Curvilinear Grid (i.e. ROMS models)',
   'Point': "Geometry conforming to CF 'point' or CDM 'Point' geometries",
-  'Time Series': 'CF timeSeries data.  Often corresponds with a station recording data over time.',
-  'Unspecified': 'Unspecified data type',
+  'Time Series': "CF 'timeSeries' data.  Often corresponds with a station recording data over time.",
+  'Unspecified': "The data type is defined as either 'Unknown' or 'None' by the data provider",
+  'any': "The data type is defined as 'any' by the data provider",
   'NCELL': 'Irregular/Unstructured Grid',
   'Unstructured Grid': 'Unstructured grid implementing ugrid conventions',
   'Buoy': 'Platform is a buoy'
