Properly formed HTML for script and link tags

--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block css %}
-<link rel=stylesheet type=text/css href="{{ url_for('.static', filename='css/map-style.css') }}"></link>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+<link rel=stylesheet type=text/css href="{{ url_for('.static', filename='css/map-style.css') }}">
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css">
 {% endblock %}
 
 {% block basepage %}
@@ -103,10 +103,10 @@
 <svg id="shared"></svg>
 
 
-<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.projection.v0.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.zoom.js') }}" /></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.projection.v0.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.geo.zoom.js') }}"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 
 <script type="text/javascript">
