--- a/ioos_catalog/templates/datasets.html
+++ b/ioos_catalog/templates/datasets.html
@@ -53,8 +53,8 @@
          </tbody>
     </table>
 
-    <script type="text/javascript" src="{{ url_for('.static', filename='js/servicemappings.js')}}" /></script>
-    <script type="text/javascript" src="{{ url_for('.static', filename='js/selectboxes.js')}}" /></script>
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/servicemappings.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/selectboxes.js')}}"></script>
     <script type="text/javascript">
       $(function() {
         populateBoxes();
