--- a/ioos_catalog/templates/services.html
+++ b/ioos_catalog/templates/services.html
@@ -103,8 +103,8 @@
     </div>
     -->
 
-    <script type="text/javascript" src="{{ url_for('.static', filename='js/servicemappings.js')}}" /></script>
-    <script type="text/javascript" src="{{ url_for('.static', filename='js/selectboxes.js')}}" /></script>
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/servicemappings.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('.static', filename='js/selectboxes.js')}}"></script>
     <script type="text/javascript">
       $(function() {
         populateBoxes();
