--- a/ioos_catalog/templates/show_service.html
+++ b/ioos_catalog/templates/show_service.html
@@ -150,8 +150,8 @@
 
 </div>
 
-<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}" /></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}"></script>
 
 <script type="text/javascript">
 
