--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -81,10 +81,10 @@
 
 </div>
 
-<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}" /></script>
-<script type="text/javascript" src="{{ url_for('.static', filename='js/servicemappings.js')}}" /></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/d3.v3.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/queue.v1.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('.static', filename='js/servicemappings.js')}}"></script>
 
 <script type="text/javascript">
 
