--- a/ioos_catalog/templates/show_service.html
+++ b/ioos_catalog/templates/show_service.html
@@ -33,7 +33,7 @@
   <a href="{{ url_for('show_service', service_id=service._id) }}">{{ service.name }}</a>
   <br/>
   <small>
-    <a href="{{ url_for('services', filter_provider=service.data_provider) }}">{{ service.data_provider }} &middot; <a href="{{ url_for('services', filter_provider=service.data_provider, filter_type=service.service_type) }}">{{ service.service_type }}</a>
+    <a href="{{ url_for('services', filter_provider=service.data_provider) }}">{{ service.data_provider }}</a> &middot; <a href="{{ url_for('services', filter_provider=service.data_provider, filter_type=service.service_type) }}">{{ service.service_type }}</a>
   </small>
 </h3>
 
