Re-enabled MultiPoint features
Mainly for presentational purposes.  Please note #133.

--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -430,9 +430,8 @@ function addData(error, geojson) {
 
   map.addLayer(polyFeatures);
   map.addLayer(traj);
-  //FIXME: MultiPoint features are pretty broken right now and interfere with
-  //      clustering
-  //map.addLayer(mpFeatures);
+  //TODO: Better handling of multipoint features
+  map.addLayer(mpFeatures);
   map.addLayer(clusterGroup);
 }
 
